--- a/public/index.html
+++ b/public/index.html
@@ -802,7 +802,7 @@
                 // API endpoints configuration
                 this.endpoints = {
                     dev: 'http://localhost:3000/api/v1/audit-script',
-                    prod: 'https://al-audit.onrender.com//api/v1/audit-script'
+                    prod: 'https://al-audit.onrender.com/api/v1/audit-script'
                 };
                 
                 this.initializeEnvironment();
